# mikrotik-cursor-mcp

./: .dockerignore  .env.test  .gitignore  API_CONVERSION_SUCCESS_REPORT.md  AUTHORS.md  CAPABILITIES.md  CHANGELOG.md  CLEANUP_AND_DOCUMENTATION_COMPLETE.md  CLEANUP_AND_REFINEMENT_SUMMARY.md  CODEBASE_REVIEW_2025.md  CODE_STATISTICS.md  COMMIT_MESSAGE.txt  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CREDITS.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  Dockerfile  ENV_TEST_QUICK_START.md  FEATURE_COVERAGE_ANALYSIS.md  FIXES_APPLIED.md  GUIDES.md  GitVersion.yml  HARDWARE_TEST_ENHANCEMENT_COMPLETE.md  HARDWARE_TEST_RESULTS_SUMMARY.md  MCP_TEST_REPORT.md  MIKROTIK_SAFE_MODE_GUIDE.md  MISSING_COVERAGE_ANALYSIS.md  MISSING_FEATURES_QUICK_REFERENCE.md  Makefile  NEIGHBOR_SCANNER_GUIDE.md  NETWORK_ARCHITECTURE_DIAGRAM.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README-NESTED.md  README.md  REAL_WORLD_EXAMPLES.md  RELEASE_NOTES_v4.7.0.md  RELEASE_NOTES_v4.8.0.md  ROADMAP.md  (+41 more)
.github/workflows/: ci.yml  publish.yml  release.yml
docker/: docker-compose.yml
docs/: AUTHORS.md  CONSOLIDATION_SUMMARY.md  INDEX.md
docs/architecture/: INTELLIGENT_WORKFLOW_DIAGRAM.md  network_topology_design.md
docs/guides/: INTELLIGENT_WORKFLOW_GUIDE.md  IP_SERVICES_GUIDE.md  NEIGHBOR_SCANNER_GUIDE.md  OSPF_MCP_USAGE_EXAMPLE.md
docs/implementation/: AUTO_DISCOVERY_OSPF_IMPLEMENTATION_REPORT.md  CLEANUP_SUMMARY.md  FINAL_SECURITY_REPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  OSPF_AUTODISCOVERY_MCP_INTEGRATION.md  auto_discovery_ospf_design.md
docs/setup/: SETUP_COMPLETE_GUIDE.md
docs/testing/: HARDWARE_VALIDATION_SUMMARY.md  REAL_WORLD_EXAMPLES_TESTED.md  TESTING_ACHIEVEMENT.md  TESTING_WORKFLOW.md
examples/: README.md  cursor-settings.json.example  env.example  mcp-config-secure.json.example  mcp-config.json.example  run_hardware_tests.bat  run_hardware_tests.sh
multi-site-manager/: .gitignore  FEATURES_SUMMARY.md  NEIGHBOR_SCANNER_README.md  QUICK_START.md  README.md  requirements.txt  site_manager.py  sites.yaml.example
multi-site-manager/examples/: README.md  daily_operations.sh  deploy_firewall_rule.py
multi-site-manager/lib/: __init__.py  backup_manager.py  bulk_operations.py  health_monitor.py  neighbor_scanner.py  site_connector.py
routeros-docker/: .env.template  docker-compose.yml
src/: connector.py  serve.py
src/mcp_mikrotik/: api_connector.py  api_fallback.py  change_safety.py  connection_manager.py  connector.py  dry_run.py  idempotency.py  logger.py  metrics.py  mikrotik_ssh_client.py  safety_manager.py  serve.py  serve_nested.py  server.py  server_nested.py
src/mcp_mikrotik/safety/: intelligent_workflow.py
src/mcp_mikrotik/scope/: backup.py  bgp.py  bonding.py  bridge_advanced.py  capsman.py  certificates.py  container.py  dhcp.py  diagnostics.py  dns.py  firewall_address_list.py  firewall_chains.py  firewall_connection.py  firewall_filter.py  firewall_layer7.py  firewall_mangle.py  firewall_nat.py  firewall_raw.py  hotspot.py  interfaces.py  ip_address.py  ip_pool.py  ip_services.py  ipv6.py  ipv6_dhcp.py  ipv6_firewall.py  logs.py  openvpn.py  ospf.py  packages.py  pppoe.py  queue_tree.py  queues.py  routes.py  routing_filters.py  safe_mode.py  scheduler.py  system.py  tunnels.py  users.py  (+7 more)
src/mcp_mikrotik/settings/: configuration.py
src/mcp_mikrotik/tools/: certificate_tools.py  connectivity_tools.py  container_tools.py  dhcp_tools.py  diagnostic_tools.py  dry_run_tools.py  firewall_advanced_tools.py  firewall_layer7_tools.py  firewall_tools.py  hotspot_tools.py  intelligent_workflow_tools.py  interface_tools.py  ip_services_tools.py  ipv6_tools.py  openvpn_tools.py  ospf_autodiscovery_tools.py  queue_tools.py  routing_advanced_tools.py  safe_mode_tools.py  system_tools.py  tool_registry.py  wireguard_tools.py  wireless_tools.py  workflow_tools.py
src/scope/: backup.py  dhcp.py  dns.py  firewall_filter.py  firewall_nat.py  ip_address.py  ip_pool.py  logs.py  routes.py  users.py
templates/: ec2-wireguard-complete.sh
tests/: DEMO_OUTPUT.md  ENHANCED_OUTPUT_SUMMARY.md  HARDWARE_TESTING_GUIDE.md  HARDWARE_TESTING_REVIEW.md  LIVE_OUTPUT_DEMO.md  QUICK_REFERENCE.md  README.md  hardware_validation.py  test_all_features.py  test_comprehensive.py  test_core.py  test_new_features.py  test_v4_8_features.py
tests/integration/: .env.example  comprehensive_test_suite.py  generate_comprehensive_tests.py  test_all_handlers.py  test_all_new_features_integration.py  test_integration_runner.py  test_mcp_comprehensive_integration.py  test_mikrotik_user_integration.py  test_simple_integration.py
tests/unit/: .gitkeep
