[build-system]                                     
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-mikrotik-nested"
version = "2.0.0"
description = "Performance-optimized MikroTik MCP server with nested tools (fork of jeff-nasseri/mikrotik-mcp)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jeff Nasseri", email = "sir.jeff.nasseri@gmail.com"},
    {name = "Kevin Pez", email = "kevinpez@users.noreply.github.com"}
]
maintainers = [
    {name = "Kevin Pez", email = "kevinpez@users.noreply.github.com"}
]
keywords = ["mcp", "mikrotik", "router", "network", "ai", "assistant", "nested", "cursor", "automation", "monitoring", "diagnostics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp>=1.8.0",  # Updated based on your site-packages
    "paramiko>=3.5.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/kevinpez/mikrotik-mcp-nested"
Issues = "https://github.com/kevinpez/mikrotik-mcp-nested/issues"
Repository = "https://github.com/kevinpez/mikrotik-mcp-nested"
"Original Project" = "https://github.com/jeff-nasseri/mikrotik-mcp"
Changelog = "https://github.com/kevinpez/mikrotik-mcp-nested/blob/main/CHANGELOG.md"
Documentation = "https://github.com/kevinpez/mikrotik-mcp-nested/blob/main/README-NESTED.md"

[project.scripts]
mcp-server-mikrotik = "mcp_mikrotik.server:main"
mcp-server-mikrotik-nested = "mcp_mikrotik.server_nested:main"

[tool.setuptools.packages.find]
where = ["src"]