[build-system]                                     
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mikrotik-cursor-mcp"
version = "2.4.0"
description = "Production-ready MikroTik MCP server optimized for Cursor IDE with 73% RouterOS coverage and workflow automation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jeff Nasseri", email = "sir.jeff.nasseri@gmail.com"},
    {name = "Kevin Pez", email = "kevinpez@users.noreply.github.com"}
]
maintainers = [
    {name = "Kevin Pez", email = "kevinpez@users.noreply.github.com"}
]
keywords = ["mcp", "mikrotik", "router", "network", "ai", "assistant", "nested", "cursor", "automation", "monitoring", "diagnostics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp>=1.8.0",  # Updated based on your site-packages
    "paramiko>=3.5.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/kevinpez/mikrotik-cursor-mcp"
Issues = "https://github.com/kevinpez/mikrotik-cursor-mcp/issues"
Repository = "https://github.com/kevinpez/mikrotik-cursor-mcp"
"Original Project" = "https://github.com/jeff-nasseri/mikrotik-mcp"
Changelog = "https://github.com/kevinpez/mikrotik-cursor-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/kevinpez/mikrotik-cursor-mcp/blob/main/README.md"

[project.scripts]
mikrotik-cursor-mcp = "mcp_mikrotik.server:main"

[tool.setuptools.packages.find]
where = ["src"]